[package]
name = "reddit"
version = "0.0.0"
authors = [ "Nathaniel Daniel <nathaniel.daniel12@gmail.com>" ]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
reqwest = { version = "0.12.15", features = [ "json" ], default-features = false }
serde = { version = "1.0.219", features = [ "derive" ] }
serde_json = "1.0.140"
thiserror = "2.0.12"
url = { version = "2.5.4", features = [ "serde" ] }

[dev-dependencies]
tokio = { version = "1.44.2", features = [ "macros", "fs" ] }

[features]
default = [ "native-tls" ]

native-tls = [ "reqwest/native-tls" ]
rustls-tls = [ "reqwest/rustls-tls" ]
