[package]
name = "reddit"
version = "0.0.0"
authors = [ "Nathaniel Daniel <nathaniel.daniel12@gmail.com>" ]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
reqwest = { version = "0.12.23", features = [ "json" ], default-features = false }
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = "1.0.145"
thiserror = "2.0.17"
url = { version = "2.5.7", features = [ "serde" ] }

[dev-dependencies]
tokio = { version = "1.47.1", features = [ "macros", "fs" ] }

[features]
default = [ "native-tls" ]

native-tls = [ "reqwest/native-tls" ]
rustls-tls = [ "reqwest/rustls-tls" ]
